chore: fix broken css

--- a/src/index.css
+++ b/src/index.css
@@ -23,15 +23,29 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  box-sizing: border-box;
+  min-width: 100svw;
+  min-height: 100svh;
 }
 
-#app {
+main {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   flex: 1;
   height: 90svh;
   border-top: 1px solid #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
+}
+
+footer {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10svh;
+  border-top: 1px solid #e0e0e0;
 }
